# ggb

./: .clang-format  .gitmodules  CMakeLists.txt
include/: board.h  board.hpp  command.h  command.hpp  geometry.h  geometry.hpp  graph.h  object.h  raylib.hpp  raylib_.h  tool.h  toolbar.h  toolbar.hpp  types.h
src/: main.c  main.cpp
src/app/: board.c  board.cpp  command.c  command.cpp  geometry.cpp  menu_bar.cpp  raylib.cpp  raylib_.c  toolbar.c  toolbar.cpp
src/core/: function.c  function.cpp  geometry.c  geometry.cpp  graph.c  graph.cpp  graph.h  internal.h  object.c
src/tools/: angle_bisector.cpp  bisector.c  bisector.cpp  circle.c  circle.cpp  circum.c  circum.cpp  circumcircle.cpp  common.c  delete.c  delete.cpp  helper.hpp  intersection.cpp  isect.c  isect.cpp  line.c  line.cpp  midpoint.c  midpoint.cpp  move.c  move.cpp  parallel.c  parallel.cpp  perp.c  perp.cpp  perpendicular.cpp  point.c  point.cpp  tangent.c  tangent.cpp
src/ui/: board.c  raylib_.c
